--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <title>Redox PROD</title>
+  <title>Redox Prod | Créations vidéos / Créations graphiques / Webdesign</title>
   <!-- META -->
   <meta charset="utf-8">
+  <meta name="description" content="Redox PROD | Créations vidéos / Créations graphiques / Webdesign"
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -11,10 +12,10 @@
 
   <!-- STYLESHEETS -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./assets/fancybox-master/dist/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
 
   <!-- FAVICON -->
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicon/apple-icon-57x57.png">
@@ -50,19 +51,20 @@
       <li><a href="#contact-anchor">Contact</a></li>
     </ul>
   </nav>
+  <section style="height:300px; padding-top: 100px; background-color: #282828; text-align: center;"><h4>Notre site est actuellement en travaux. Certaines fonctionnalités ne sont donc pas disponibles. Merci de votre compréhesion.</h4><br><br> - L'équipe de Redox Prod</section>
   <section id="home" class="double-height">
     <div class="content">
-      <img class="logo" src="./assets/images/home/logo_trans.png">
-      <img class="logo-text" src="./assets/images/home/redox_text.png">
+      <img class="logo" src="./assets/images/home/logo_trans.png" alt="redox logo">
+      <img class="logo-text" src="./assets/images/home/redox_text.png" alt="redox logo title">
       <div class="bullet">
         <a href="https://www.instagram.com/redox_mikael/" target="_blank">
-          <img src="./assets/images/home/instagram.png" >
+          <img src="./assets/images/home/instagram.png" alt="instagram logo">
         </a>
         <a href="https://vimeo.com/user65773366" target="_blank">
-          <img src="./assets/images/home/vimeo.png" >
+          <img src="./assets/images/home/vimeo.png" alt="vimeo logo">
         </a>
         <a href="" target="_blank">
-          <img src="./assets/images/home/youtube.png">
+          <img src="./assets/images/home/youtube.png" alt="youtube logo">
         </a>
       </div>
     </div>
@@ -73,20 +75,20 @@
     <h1>Services</h1>
     <section id="services" class="flex-box">
       <div class="skills">
-        <img src="./assets/images/about/camera.png">
+        <img src="./assets/images/about/camera.png" alt="camera picto">
         <p>PHOTOGRAPHIE / VIDÉO<br>-<br>Nous nous occupons de la couverture photo et vidéo de vos événements.</p>
       </div>
 
        <div class="skills">
-        <img src="./assets/images/about/clapperboard.png">
+        <img src="./assets/images/about/clapperboard.png" alt="clapperboard picto">
         <p>PUBLICITÉ VIDÉO<br>-<br>Que ce soit pour la promotion d'un produit, d'un événement, ou de votre organisation en général, nous nous occupons de la création de votre spot publicitaire de A à Z.</p>
       </div>
       <div class="skills">
-        <img src="./assets/images/about/flyer.png">
+        <img src="./assets/images/about/flyer.png" alt="flyer picto">
         <p>CRÉATIONS GRAPHIQUES<br>-<br>Flyers, logo, booklet, ... La création graphique de vos futurs projets imprimés, afin d'atteindre votre public cible.</p>
       </div>
       <div class="skills">
-        <img src="./assets/images/about/computer-graphic.png">
+        <img src="./assets/images/about/computer-graphic.png" alt="computer picto">
         <p>CRÉATION DE SITE WEB<br>-<br>Nous nous occupons de mettre à jour votre site internet, ou d'en créer un nouveau, selon vos besoins et budgets, en vous offrant toutes les dernières technologies web du moment.</p>
       </div>
     </section>
@@ -97,11 +99,11 @@
       <p style="text-align:justify;width:80%">Redox Prod: une petite équipe qui voit les choses en grand ! Le label rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectifs. Notre but est d'offrir un service de qualité, et à petit prix. Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut.<br><br>Notre équipe : </p>
   </div>
     <section id="team" class="flex-box">
-      <div class="member"><img src="assets/images/team/mika.JPG"><p>MIKAËL RUFFIEUX<br>-<br>
+      <div class="member"><img src="assets/images/team/mika.JPG" alt="mikael ruffieux"><p>MIKAËL RUFFIEUX<br>-<br>
       Vidéaste, graphiste et web-designer</p></div>
-      <div class="member"><img src="assets/images/team/keran.jpg"><p>KERAN KOCHER<br>-<br>
+      <div class="member"><img src="assets/images/team/keran.jpg" alt="keran kocher"><p>KERAN KOCHER<br>-<br>
       Photographe, front & back end programmeur</p></div>
-      <div class="member"><img src="assets/images/team/blm.jpg"><p>BENOÎT LÉO MAILLARD<br>-<br>
+      <div class="member"><img src="assets/images/team/blm.jpg" alt="benoit leo maillard"><p>BENOÎT LÉO MAILLARD<br>-<br>
       Back end programmeur</p></div>
     </section>
     </section>
@@ -127,31 +129,31 @@
     <section id="gallery-video" style="border-bottom:solid white 1px" class="flex-gallery">
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/266120847">
-          <img src="./assets/images/projects/min_bullebox.png">
+          <img src="./assets/images/projects/min_bullebox.jpg" alt="bullebox min">
           <p>Bulle Box - Service de la Jeunesse</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/247694127">
-          <img src="./assets/images/projects/min_buda.png">
+          <img src="./assets/images/projects/min_buda.jpg" alt="budapest min">
           <p>Sziget Festival 2017 - Budapest</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/220195324">
-          <img src="./assets/images/projects/min_dentdebroc.png">
+          <img src="./assets/images/projects/min_dentdebroc.jpg" alt="dent de broc min">
           <p>Dent de Broc 2017</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/214376110">
-          <img src="./assets/images/projects/min_showreel16.png">
+          <img src="./assets/images/projects/min_showreel16.jpg">
           <p>Showreel 2016</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/214411319">
-          <img src="./assets/images/projects/min_gym.png">
+          <img src="./assets/images/projects/min_gym.jpg">
           <p>Soirée de gym 2016 - FSG Bulle</p>
         </a>
       </div>
@@ -184,20 +186,20 @@
     <h1>Web design</h1>
     <section id="gallery-web" class="flex-gallery" style="border-bottom:solid white 1px">
       <div class="gallery-item">
-        <a href="./assets/images/screenshots/bullebox.PNG" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
+        <a href="./assets/images/screenshots/bullebox.jpg" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
           <img src="assets/images/projects/min_bulleboxweb.png">
           <p>Formulaire de commande - Bulle Box</p>
         </a>
       </div>
       <div class="gallery-item">
-        <a href="./assets/images/screenshots/promyana.png" data-fancybox data-caption="Adresse du site : http://promyana.org/">
+        <a href="./assets/images/screenshots/promyana.jpg" data-fancybox data-caption="Adresse du site : http://promyana.org/">
           <img src="assets/images/projects/min_promyana.png">
            <p>promyana.org</p>
         </a>
       </div>
       <div class="gallery-item">
-        <a href="./assets/images/screenshots/stiftung-mehrwert.png" data-fancybox data-caption="Adresse du site : http://stiftung-mehrwert.ch">
-          <img src="assets/images/screenshots/stiftung-mehrwert.png">
+        <a href="./assets/images/screenshots/stiftung-mehrwert.jpg" data-fancybox data-caption="Adresse du site : http://stiftung-mehrwert.ch">
+          <img src="assets/images/screenshots/stiftung-mehrwert.jpg">
           <p>stiftung-mehrwert.ch</p>
         </a>
       </div>
@@ -226,11 +228,11 @@
       <div class="contact-box">
         <div class="box">
           <img src="./assets/images/contact/phone.png ">
-          <p>Téléphone :</p><i>+41 79 108 66 18</i>
+          <p>Téléphone :</p><i>+&#052;&#049;&#032;&#055;&#057;&#032;&#049;&#048;&#056;&#032;&#054;&#054;&#032;&#049;&#056;</i>
         </div>
         <div class="box">
           <img src="./assets/images/contact/mail.png">
-          <p>Mail :</p><i>ruffieux.mikael @ gmail.com</i>
+          <p>Mail :</p><i>&#114;&#117;&#102;&#102;&#105;&#101;&#117;&#120;&#046;&#109;&#105;&#107;&#097;&#101;&#108;<br>&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</i>
         </div>
       </div>
       <!--<form action="contact.php" method="post" align="center">
@@ -239,9 +241,9 @@
         <input type="text" name="subject" maxlength="60" size="30" placeholder="Sujet.."></input>
         <textarea name="message" maxlength="1000" rows="6" cols="25" placeholder="Votre message..*"></textarea>
         <input type="submit" value="Envoyer" name="contact">
-      </form>
+      </form>-->
     </div>
-  </section>-->
+  </section>
 
   <footer>
     <div class="bullet">
@@ -263,7 +265,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="order.js"></script>
 <script src="./assets/fancybox-master/dist/jquery.fancybox.min.js"></script>
 <link rel="manifest" href="./assets/images/favicon/manifest.json">
 
