testing contact form

--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
           <p>Mail :</p><i>&#114;&#117;&#102;&#102;&#105;&#101;&#117;&#120;&#046;&#109;&#105;&#107;&#097;&#101;&#108;<br>&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</i>
         </div>
       </div>
-      <!--<form action="contact.php" method="post" align="center">
+      <form action="contact.php" method="post">
         <input type="text" name="name" maxlength="60" size="30" placeholder="Votre nom, prénom..*"></input>
         <input type="email" name="email" maxlength="60" size="30" placeholder="Votre e-mail..*"></input>
         <input type="text" name="subject" maxlength="60" size="30" placeholder="Sujet.."></input>
         <textarea name="message" maxlength="1000" rows="6" cols="25" placeholder="Votre message..*"></textarea>
         <input type="submit" value="Envoyer" name="contact">
-      </form>-->
+      </form>
     </div>
   </section>
 
