--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li><a href="#contact-anchor">Contact</a></li>
     </ul>
   </nav>
-    <div class="content">
+    <div class="content" id="home">
       <img class="logo" src="./assets/images/home/logo_trans.png" alt="redox logo">
       <img class="logo-text" src="./assets/images/home/redox_text.png" alt="redox logo title">
       <div class="bullet">
