debug + template edit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Redox Prod | Créations vidéos / Créations graphiques / Webdesign</title>
   <!-- META -->
   <meta charset="utf-8">
-  <meta name="description" content="Redox PROD | Créations vidéos / Créations graphiques / Webdesign"
+  <meta name="description" content="Redox PROD | Créations vidéos / Créations graphiques / Webdesign">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -51,7 +51,8 @@
       <li><a href="#contact-anchor">Contact</a></li>
     </ul>
   </nav>
-    <div class="content" id="home">
+  <section id="home" class="double-height">
+    <div class="content">
       <img class="logo" src="./assets/images/home/logo_trans.png" alt="redox logo">
       <img class="logo-text" src="./assets/images/home/redox_text.png" alt="redox logo title">
       <div class="bullet">
